[main] read 관련 ok/fail transformer 추가